Added translation support
